--- a/resume.html
+++ b/resume.html
@@ -32,6 +32,7 @@
 		Job responsibilities
 		<ul type="circle">
 			<li>Experienced manager with over two years’ experience leading a sales team.</li>
+			<br/>
 			<li>Top performing employee on regional quarterly performance reviews. </li>
 			<li> Provide elite customer service and training to companies with technical and accounting issues. </li>
 			<li>Currently looking for a position with upward mobility;</li>
@@ -78,10 +79,19 @@
 			<td>2010</td>
 		</tr>
 		
-		
+	</table>
 </div>
 
-</div>		
+<div>
+	<p style="text-align:right;font-size:25px;margin-right:30px">Signature
+		<img src="/home/6CSE1/signature.png"  style="float:right;height:100;width:200" >
+	</p>
+<br><br> <br><br>
+		
+
+</div>	
+
+</div>	
 
 
 
